Port widget to 1.18